<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ReddiTry</string>
    <string name="subreddit">Subreddit</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profil">Profil</string>
    <string name="background_image">Background image</string>
    <string name="login_with_reddit">Login with reddit</string>
    <string name="or_create_a_reddit_account">
        <u>or create a Reddit account</u>
    </string>
    <string name="placeholder_post_subreddit">r/IconFamily</string>
    <string name="placeholder_post_user">u/loveIcon</string>
    <string name="placeholder_post_title">DISCOVER ALL THE WONDERFUL THINGS I\'VE CREATED IN MY
        FUCKING LIFE</string>
    <string name="placeholder_post_content">Hey everyone!\n\n\As a programmer, I love to challenge myself and learn new skills. Over the years, I\'ve created a variety of awesome projects that I\'m really proud of, and I wanted to share them with you all.\n\n\First, I created a
        web app that helps people track their water intake and reminds them to drink water
        throughout the day. It was a fun project that taught me a lot about web development and
        working with APIs.\n\n\I also created a game using Unity that has a retro aesthetic and a
        simple yet addictive gameplay. It was my first experience with game development and I had a
        blast creating it.\n\n\Another project I\'m proud of is a machine learning model that can
        predict the likelihood of a given tweet going viral. I trained it using data from Twitter\'s
        API and was pleasantly surprised with how accurate the predictions were.\n\n\Lastly, I built
        a portfolio website to showcase all of my programming projects and to provide potential
        clients with a way to get in touch with me. It was a fun way to practice my front-end
        development skills.\n\n\I\'m always looking for new challenges and ways to improve my
        programming skills, and I\'m excited to see what projects I\'ll create in the future. If you
        want to check out any of the projects I mentioned, feel free to reach out to me!\n\n\Thanks
        for reading, and happy programming!</string>
    <string name="placeholder_post_comments">861</string>
    <string name="placeholder_post_votes">573</string>
    <string name="up_vote">Up vote</string>
    <string name="down_vote">Down vote</string>
    <string name="comment">Comment</string>
    <string name="altname_post_image">Post Image</string>
    <string name="placeholder_country">France</string>
    <string name="placeholder_description_profile">This is a wonderful description you can have in
        your profile page</string>
    <string name="follow_button">Follow</string>
    <string name="edit_button">EDIT</string>
    <string name="exit_button">EXIT</string>
    <string name="posts">Posts</string>
    <string name="placeholder_number_of_followers">145 followers</string>
    <string name="placeholder_username">Username</string>
    <string name="log_out">log_out</string>
    <string name="alt_banner">banner</string>
    <string name="alt_profile_picture">profile_picture</string>
    <string name="placeholder_subreddit_name">r/Subreddit</string>
    <string name="placeholder_subreddit_title">Subreddit Title</string>
    <string name="placeholder_number_members">_254_543_members</string>
    <string name="text_search" tools:ignore="ExtraTranslation">Search for your favorite \n subreddit right here!</string>
    <string name="placeholder_description_subreddit">Cette session Bootstrap - Organizational theory
        de type Bootstrap a été déplacée du 20/02/2023, 15h00 au 20/02/2023, 14h30Pensez à vous
        désinscrire de cette session si vous n\'êtes pas disponible au nouvel horaire Voir les
        autres inscrits ...</string>
    <string name="placeholder_subscribe">Subscribe</string>
    <string name="sort_by">SORT BY:</string>
    <string name="form_new_email">New email...</string>
    <string name="text_area_form_edit">Write something about you...</string>
    <string name="text_area_name_form">New Display name</string>
    <string name="title_edit_profile">Edit your profile</string>
    <string name="select_country">country</string>
    <string name="application_logo">applicatin logo</string>
    <string-array name="countryList">
        <item>France</item>
        <item>Italia</item>
        <item>US</item>
        <item>Spain</item>
    </string-array>
    <string name="search_input">Search...</string>
    <string name="alt_orangearrow">orangeArrow</string>
    <string name="alt_back_arrow">back_arrow</string>
    <string name="alt_logo">logo</string>
    <string-array name="sort_by_choices">
        <item>Newest</item>
        <item>Popular</item>
        <item>Hot</item>
        <item>Best</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_underage" tools:ignore="ExtraTranslation">-18</string>
    <string name="underage_text">Age: +18</string>
    <string name="button_save">Save</string>
    <string name="followers">followers</string>
    <string name="search_button">search button</string>
    <string name="edit_profile_picture">edit profile picture</string>
    <string name="members">%d members</string>
    <string name="end_of_posts">No posts left</string>
</resources>
