<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_edit_profile"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/display_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:hint="@string/text_area_name_form"
        android:paddingTop="20dp"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_name_edit"
        android:hint="@string/text_area_form_edit"
        android:paddingTop="20dp"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="8"
            android:scrollbars="vertical"
            tools:ignore="LabelFor" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/underage_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_edit"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/underage_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/component_form_edit_profile_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/underage_edit"
        android:hint="@string/select_country"
        android:paddingTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/countryList" />
        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/component_form_edit_profile_menu"
        android:layout_marginTop="21dp"
        android:backgroundTint="@color/orange"
        android:gravity="center"
        android:text="@string/button_save" />

</RelativeLayout>
