<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".SearchActivity">

    <GridLayout
        android:id="@+id/search_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/alt_back_arrow"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@+id/search_input"
            app:layout_constraintEnd_toStartOf="@+id/search_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/orange" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_band"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_input"
            android:paddingTop="5dp"
            android:textColorHint="@color/grey"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/search_button"
            android:src="@drawable/baseline_search_24"
            app:tint="@color/orange" />

    </GridLayout>

    <RelativeLayout
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/search_bar">


        <TextView

            android:id="@+id/text_explanation_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/text_search"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignBottom="@+id/text_explanation_search"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/text_explanation_search"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/alt_orangearrow"
            android:scaleType="fitCenter"
            android:scaleY="-1"
            android:src="@drawable/rounded_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/text_explanation_search"

            app:tint="@color/orange" />


        <ImageView

            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/text_explanation_search"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/alt_logo"
            android:src="@drawable/redditry_logo" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar"
        style="@style/NavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

