<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/purple_light"
    tools:parentTag="android.widget.RelativeLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/subreddit_icon_container"
                android:layout_width="50dp"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/subreddit_icon"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/redditry_logo"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:strokeColor="@color/black"
                    app:strokeWidth="0.5dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/subreddit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/subreddit_icon_container"
                android:text="@string/placeholder_post_subreddit"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/subreddit_name"
                android:layout_alignBottom="@id/subreddit_icon_container"
                android:layout_marginBottom="6dp"
                android:text="@string/placeholder_post_user"
                android:textColor="@color/grey"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/placeholder_post_title"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/media_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/altname_post_image"
                    android:scaleType="centerInside" />

                <VideoView
                    android:id="@+id/video"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/media_container"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:text="@string/placeholder_post_content"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_below="@+id/content_layout"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/upvote_button_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/upvote_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:contentDescription="@string/up_vote"
                    android:foreground="@drawable/upvote_icon"
                    android:foregroundTint="@color/grey"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/upvote_button_container"
                android:layout_marginHorizontal="2dp"
                android:layout_toEndOf="@id/upvote_button_container"
                android:text="@string/placeholder_post_votes"
                android:textColor="@color/grey"
                android:textSize="11sp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/down_vote_button_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/votes">

                <ImageButton
                    android:id="@+id/down_vote_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:contentDescription="@string/down_vote"
                    android:foreground="@drawable/upvote_icon"
                    android:foregroundTint="@color/grey"
                    android:rotation="180"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/comment_button_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/down_vote_button_container">

                <ImageButton
                    android:id="@+id/comment_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:contentDescription="@string/comment"
                    android:foreground="@drawable/round_mode_comment_24"
                    android:foregroundTint="@color/grey"
                    android:scaleX="-1"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/upvote_button_container"
                android:layout_marginHorizontal="2dp"
                android:layout_toEndOf="@id/comment_button_container"
                android:text="@string/placeholder_post_comments"
                android:textColor="@color/grey"
                android:textSize="11sp" />

        </RelativeLayout>

    </RelativeLayout>
</merge>